--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,31 @@
   height: 100px;
   width: 100px;
 }
+
+.cell {
+  position: relative;
+}
+
+.W::before {
+  background-color: #fff;
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.B::before {
+  background-color: #000;
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
