chore: Update Othello game board styling and functionality

--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,19 @@
   height: 50px;
   border-radius: 50%;
 }
+
+.valid-move {
+  position:relative;
+}
+
+.valid-move::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #ddd;
+}
